Add document upload instructions text #497 + File Upload Component Solution
-- Unique File Upload instructions + Filetype Indicators placed
-- Script to re-generate unique filetypes to inputs when form is either cleared or file upload is deleted
-- Solution to live application File Upload component issue as discussed in WebEx 7/18 3PM (modifications to jQuery and, in some cases, HTML

--- a/ROA_S3.html
+++ b/ROA_S3.html
@@ -301,8 +301,8 @@
                                                                 <textarea id="noregister" rows="6" wrap="hard" class="form-control"></textarea>
                                                                 <p class="form-group form-group-md">Optional upload.</p>
                                                                 <div class="form-group form-group-md hidethis">
-                                                                    <label class="small upload-drop-zone" for="file"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select file</div></label>
-                                                                    <input type="file" id="file" name="file" class="form-control">
+                                                                    <label class="small upload-drop-zone" for="file"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .pdf, .doc</div></label>
+                                                                    <input type="file" id="file" name="file" class="form-control" accept=".jpg,.pdf,.doc,.docx">
                                                                 </div><!-- Drop Zone -->
                                                                 <div class="row">
                                                                     <div class="js-upload-finished col-xs-12">
