--- a/attorney_info_M010.html
+++ b/attorney_info_M010.html
@@ -756,10 +756,11 @@
                                         </div>
                                     </div>
                                     <div class="form-group form-group-md upload">
+                                    	<p id="upcredentials">Upload bar credentials, including certificate of good standing from highest court of a state, commonwealth, territory or possession, or of the District of Columbia evidencing that you are a member of the bar of such court and are in good standing:</p>
                                         <div class="form-group form-group-md hidethis">
                                             <label class="small long upload-drop-zone" for="file"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>
-    Upload bar credentials, including certificate of good standing from highest court of a state, commonwealth, territory or possession, or of the District of Columbia evidencing that you are a memeber of the bar of such court and are in good standing.</label>
-                                            <input type="file" id="file" name="file" class="form-control">
+    Upload file. Allowed file types .jpg, .pdf, .doc</label>
+                                            <input type="file" id="file" name="file" class="form-control" accept=".jpg,.pdf,.doc,.docx" aria-decribedby="upcredentials">
                                         </div>
                                         <div class="row">
                                             <div class="js-upload-finished col-xs-12">
