--- a/marks_design_with_text_M3.html
+++ b/marks_design_with_text_M3.html
@@ -222,8 +222,9 @@
                                                 <fieldset>
                                                     <legend class="sr-only"><span>File upload</span></legend>
                                                     <div class="form-group form-group-md hidethis">
-                                                        <label class="small upload-drop-zone" for="file"><div id="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                        <input type="file" id="file" name="file" class="form-control">
+                                                        <label class="small upload-drop-zone" for="file">
+                                                        	<span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                        <input type="file" id="file" name="file" class="form-control" accept=".jpg,.tiff,.png">
                                                     </div>
                                                     <div class="row">
                                                         <div class="js-upload-finished col-xs-12">
