--- a/marks_design_with_text_uploaded_M5.html
+++ b/marks_design_with_text_uploaded_M5.html
@@ -532,8 +532,8 @@
                                                                         <h4 class="weight600">Provide the consent here. You can use your own consent template or use USPTO consent template provided below.</h4>
                                                                         <p><a href="#"><span class="glyphicon glyphicon-download" role="img" aria-label="download consent template"></span> Consent Template</a></p>
                                                                         <div class="form-group form-group-md hidethis">
-                                                                            <label class="small upload-drop-zone" for="consentfile"><div id="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                            <input type="file" id="consentfile" name="consentfileupload" class="form-control" multiple>
+                                                                            <label class="small upload-drop-zone" for="consentfile"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .doc</label>
+                                                                            <input type="file" id="consentfile" name="consentfileupload" class="form-control" accept=".doc,.docx">
                                                                         </div><!-- Drop Zone -->
                                                                         <div class="row">
                                                                             <div class="js-upload-finished col-xs-12">
