--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -439,8 +439,8 @@
                                                                 <p><a href="#"><span class="glyphicon glyphicon-download" aria-hidden="true"></span> Consent Template</a></p>
                                                                 <div class="form-group form-group-md hidethis">
                                                                     <label class="small upload-drop-zone" for="consentfile"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>
-                                                                        Upload Consent</label>
-                                                                    <input type="file" id="consentfile" name="consentfileupload" class="form-control">
+                                                                        Upload file. Allowed file types .doc</label>
+                                                                    <input type="file" id="consentfile" name="consentfileupload" class="form-control" accept=".doc,.docx">
                                                                 </div><!-- Drop Zone -->
                                                                 <div class="row">
                                                                     <div class="js-upload-finished col-xs-12">
