--- a/post_reg_section8.html
+++ b/post_reg_section8.html
@@ -299,8 +299,11 @@
                                                             <p id="upimage">Provide an image of your specimen:</p>
                                                             <div>
                                                                 <div class="form-group form-group-md hidethis">
-                                                                    <label class="small upload-drop-zone" for="specimenfile" id="upimg"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                    <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimg upimage">
+                                                                    <label class="small upload-drop-zone" for="specimenfile" id="upimg">
+                                                                    <div class="fileDisplayArea">
+                                                                    <span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</div>
+                                                                    </label>
+                                                                    <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimg upimage">
                                                                 </div>
                                                                 <div class="row">
                                                                     <div class="js-upload-finished col-xs-12">
@@ -339,8 +342,8 @@
                                                                     <div class="col-xs-12 form-group form-group-md upload">
                                                                         <p id="upimagethree">Provide an image of your specimen:</p>
                                                                         <div class="form-group form-group-md hidethis">
-                                                                            <label class="small upload-drop-zone" for="specimenthreefile" id="upimgthree"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                            <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" aria-labelledby="upimgthree upimagethree">
+                                                                            <label class="small upload-drop-zone" for="specimenthreefile" id="upimgthree"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png></label>
+                                                                            <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgthree upimagethree">
                                                                         </div>
                                                                         <div class="row">
                                                                             <div class="js-upload-finished col-xs-12">
@@ -397,8 +400,8 @@
                                                                     <div class="col-xs-12 form-group form-group-md upload">
                                                                         <p id="upimagethree">Provide an image of your specimen:</p>
                                                                         <div class="form-group form-group-md hidethis">
-                                                                            <label class="small upload-drop-zone" for="specimenthreefile" id="upimgthree"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                            <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" aria-labelledby="upimgthree upimagethree">
+                                                                            <label class="small upload-drop-zone" for="specimenthreefile" id="upimgthree"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                            <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgthree upimagethree">
                                                                         </div>
                                                                         <div class="row">
                                                                             <div class="js-upload-finished col-xs-12">
@@ -466,8 +469,8 @@
                                                                         <p id="upimagefour">Provide an image of your specimen:</p>
                                                                         <div>
                                                                             <div class="form-group form-group-md hidethis">
-                                                                                <label class="small upload-drop-zone" for="specimenfile" id="upimgfour"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                                <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimgfour upimagefour">
+                                                                                <label class="small upload-drop-zone" for="specimenfile" id="upimgfour"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                                <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgfour upimagefour">
                                                                             </div>
                                                                             <div class="row">
                                                                                 <div class="js-upload-finished col-xs-12">
@@ -505,8 +508,8 @@
                                                                             <div class="col-xs-12 form-group form-group-md upload">
                                                                                 <p id="upimagethree">Provide an image of your specimen:</p>
                                                                                 <div class="form-group form-group-md hidethis">
-                                                                                    <label class="small upload-drop-zone" for="specimenthreefile" id="upimgthree"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                                    <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" aria-labelledby="upimgthree upimagethree">
+                                                                                    <label class="small upload-drop-zone" for="specimenthreefile" id="upimgthree"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                                    <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgthree upimagethree">
                                                                                 </div>
                                                                                 <div class="row">
                                                                                     <div class="js-upload-finished col-xs-12">
@@ -563,8 +566,8 @@
                                                                             <div class="col-xs-12 form-group form-group-md upload">
                                                                                 <p id="upimagesix">Provide an image of your specimen:</p>
                                                                                 <div class="form-group form-group-md hidethis">
-                                                                                    <label class="small upload-drop-zone" for="specimentwelvefile" id="upimgsix"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                                    <input type="file" id="specimentwelvefile" name="specimentwelvefileupload" class="form-control" aria-labelledby="upimgsix upimagesix">
+                                                                                    <label class="small upload-drop-zone" for="specimentwelvefile" id="upimgsix"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                                    <input type="file" id="specimentwelvefile" name="specimentwelvefileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgsix upimagesix">
                                                                                 </div>
                                                                                 <div class="row">
                                                                                     <div class="js-upload-finished col-xs-12">
