--- a/statement_of_use.html
+++ b/statement_of_use.html
@@ -286,8 +286,8 @@
                                                     <h2 class="weight600">Attach Specimen</h2>
                                                     <p id="upimagetwo">Please provide a specimen for this individual good/service.</p>
                                                     <div class="form-group form-group-md hidethis">
-                                                        <label class="small upload-drop-zone" for="specimensixfile" id="upimgtwo"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                        <input type="file" id="specimensixfile" name="specimensixfileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
+                                                        <label class="small upload-drop-zone" for="specimensixfile" id="upimgtwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                        <input type="file" id="specimensixfile" name="specimensixfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgtwo upimagetwo">
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-xs-12 js-upload-finished">
@@ -477,8 +477,8 @@
                                             <h2 class="weight600">Attach Specimen</h2>
                                             <p id="upimagetwo">Please provide a specimen for this individual good/service.</p>
                                             <div class="form-group form-group-md hidethis">
-                                                <label class="small upload-drop-zone" for="specimensixfile" id="upimgtwo"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                <input type="file" id="specimensixfile" name="specimensixfileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
+                                                <label class="small upload-drop-zone" for="specimensixfile" id="upimgtwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                <input type="file" id="specimensixfile" name="specimensixfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgtwo upimagetwo">
                                             </div>
                                             <div class="row">
                                                 <div class="col-xs-12 js-upload-finished">
