--- a/additional_information.html
+++ b/additional_information.html
@@ -226,8 +226,8 @@
                                                 <textarea id="ta8" rows="3" class="form-control"></textarea>
                                                 <p class="weight600 form-group form-group-md">Optional upload.</p>
                                                 <div class="form-group form-group-md hidethis">
-                                                    <label class="small upload-drop-zone" for="file"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select file</div></label>
-                                                    <input type="file" id="file" name="file" class="form-control">
+                                                    <label class="small upload-drop-zone" for="file"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .pdf, .doc</div></label>
+                                                    <input type="file" id="file" name="file" class="form-control" accept=".jpg,.pdf,.doc,.docx">
                                                 </div><!-- Drop Zone -->
                                                 <div class="row">
                                                     <div class="js-upload-finished col-xs-12">
@@ -367,8 +367,8 @@
                                                         <div id="yesevidence" class="form-group upload" role="alert">
                                                             <p class="weight600" role="heading" aria-level="3">Upload evidence.</p>
                                                             <div class="form-group form-group-md hidethis">
-                                                                <label class="small upload-drop-zone" for="filetwo"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select file</div></label>
-                                                                <input type="file" id="filetwo" name="filetwo" class="form-control">
+                                                                <label class="small upload-drop-zone" for="filetwo"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .pdf, .doc</div></label>
+                                                                <input type="file" id="filetwo" name="filetwo" class="form-control" accept=".jpg,.pdf,.doc,.docx">
                                                             </div>
                                                             <div class="row">
                                                                 <div class="js-upload-finished col-xs-12">
@@ -498,8 +498,8 @@
                                                                 </div>
                                                                 <p class="weight600" role="heading" aria-level="3">Upload supporting documents.</p>
                                                                 <div class="form-group form-group-md hidethis">
-                                                                    <label class="small upload-drop-zone" for="filethree"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload a File</label>
-                                                                    <input type="file" id="filethree" name="filethree_courtd" class="form-control">
+                                                                    <label class="small upload-drop-zone" for="filethree"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .pdf, .doc</label>
+                                                                    <input type="file" id="filethree" name="filethree_courtd" class="form-control" accept=".jpg,.pdf,.doc,.docx">
                                                                 </div>
                                                                 <div class="row">
                                                                     <div class="js-upload-finished col-xs-12">
@@ -633,8 +633,8 @@
                                                             </div>
                                                             <p class="weight600" role="heading" aria-level="3">Upload supporting documents.</p>
                                                             <div class="form-group form-group-md hidethis">
-                                                                <label class="small upload-drop-zone" for="filefour_ttab"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload a file</label>
-                                                                <input type="file" id="filefour_ttab" name="filefour_ttab" class="form-control">
+                                                                <label class="small upload-drop-zone" for="filefour_ttab"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .pdf, .doc</label>
+                                                                <input type="file" id="filefour_ttab" name="filefour_ttab" class="form-control" accept=".jpg,.pdf,.doc,.docx">
                                                             </div>
                                                             <div class="row">
                                                                 <div class="js-upload-finished col-xs-12">
@@ -772,8 +772,8 @@
                                                             </div>
                                                             <p class="weight600" role="heading" aria-level="3">Upload supporting documents.</p>
                                                             <div class="form-group form-group-md hidethis">
-                                                                <label class="small upload-drop-zone" for="filefive_conflictingreg"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload a file</label>
-                                                                <input type="file" id="filefive_conflictingreg" name="filefive_conflictingreg" class="form-control">
+                                                                <label class="small upload-drop-zone" for="filefive_conflictingreg"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .pdf, .doc</label>
+                                                                <input type="file" id="filefive_conflictingreg" name="filefive_conflictingreg" class="form-control" accept=".jpg,.pdf,.doc,.docx">
                                                             </div>
                                                             <div class="row">
                                                                 <div class="js-upload-finished col-xs-12">
@@ -907,8 +907,8 @@
                                                                 </div>
                                                                 <p class="weight600" role="heading" aria-level="3">Upload supporting documents.</p>
                                                                 <div class="form-group form-group-md hidethis">
-                                                                    <label class="small upload-drop-zone" for="filesix"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload a file</label>
-                                                                    <input type="file" id="filesix" name="filesix" class="form-control">
+                                                                    <label class="small upload-drop-zone" for="filesix"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .pdf, .doc</label>
+                                                                    <input type="file" id="filesix" name="filesix" class="form-control" accept=".jpg,.pdf,.doc,.docx">
                                                                 </div>
                                                                 <div class="row">
                                                                     <div class="js-upload-finished col-xs-12">
