--- a/filing_basis_ab.html
+++ b/filing_basis_ab.html
@@ -262,8 +262,8 @@
                                                                 <p id="upimage">Provide an image of your specimen:</p>
                                                                 <div>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenfile" id="upimg"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimg upimage">
+                                                                        <label class="small upload-drop-zone" for="specimenfile" id="upimg"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimg upimage">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -317,8 +317,8 @@
                                                                 <div class="col-xs-12 form-group form-group-md upload">
                                                                     <p id="upimagetwo">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimensixfile" id="upimgtwo"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimensixfile" name="specimensixfileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
+                                                                        <label class="small upload-drop-zone" for="specimensixfile" id="upimgtwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimensixfile" name="specimensixfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgtwo upimagetwo">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -372,8 +372,8 @@
                                                                 <div class="col-xs-12 form-group form-group-md upload">
                                                                     <p id="upimagethree">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenthreefile" id="upimgthree"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" aria-labelledby="upimgthree upimagethree">
+                                                                        <label class="small upload-drop-zone" for="specimenthreefile" id="upimgthree"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgthree upimagethree">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -426,8 +426,8 @@
                                                                 <p id="upimagefour">Provide an image of your specimen:</p>
                                                                 <div>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenfile" id="upimgfour"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimgfour upimagefour">
+                                                                        <label class="small upload-drop-zone" for="specimenfile" id="upimgfour"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgfour upimagefour">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -481,8 +481,8 @@
                                                                 <div class="col-xs-12 form-group form-group-md upload">
                                                                     <p id="upimagefive">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenninefile" id="upimgfive"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenninefile" name="specimenninefileupload" class="form-control" aria-labelledby="upimgfive upimagefive">
+                                                                        <label class="small upload-drop-zone" for="specimenninefile" id="upimgfive"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimenninefile" name="specimenninefileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgfive upimagefive">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -536,8 +536,8 @@
                                                                 <div class="col-xs-12 form-group form-group-md upload">
                                                                     <p id="upimagesix">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimentwelvefile" id="upimgsix"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimentwelvefile" name="specimentwelvefileupload" class="form-control" aria-labelledby="upimgsix upimagesix">
+                                                                        <label class="small upload-drop-zone" for="specimentwelvefile" id="upimgsix"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimentwelvefile" name="specimentwelvefileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgsix upimagesix">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -589,8 +589,8 @@
                                                                 <p id="upimageseven">Provide an image of your specimen:</p>
                                                                 <div>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenfile" id="upimgseven"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimgseven upimageseven">
+                                                                        <label class="small upload-drop-zone" for="specimenfile" id="upimgseven"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgseven upimageseven">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -644,8 +644,8 @@
                                                                 <div class="col-xs-12 form-group form-group-md upload">
                                                                     <p id="upimageeight">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenfifteenfile" id="upimgeight"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenfifteenfile" name="specimenfifteenfileupload" class="form-control" aria-labelledby="upimgeight upimageeight">
+                                                                        <label class="small upload-drop-zone" for="specimenfifteenfile" id="upimgeight"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimenfifteenfile" name="specimenfifteenfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgeight upimageeight">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -699,8 +699,8 @@
                                                                 <div class="col-xs-12 form-group form-group-md upload">
                                                                     <p id="upimagenine">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimeneighteenfile" id="upimgnine"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimeneighteenfile" name="specimeneighteenfileupload" class="form-control" aria-labelledby="upimgnine upimagenine">
+                                                                        <label class="small upload-drop-zone" for="specimeneighteenfile" id="upimgnine"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimeneighteenfile" name="specimeneighteenfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgnine upimagenine">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
