--- a/filing_basis_abde.html
+++ b/filing_basis_abde.html
@@ -255,8 +255,8 @@
                                                                 <p id="upimage">Provide an image of your specimen:</p>
                                                                 <div>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenfile" id="upimg"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" aria-labelledby="upimg upimage">
+                                                                        <label class="small upload-drop-zone" for="specimenfile" id="upimg"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimenfile" name="specimenfileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimg upimage">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -311,8 +311,8 @@
                                                                 <div class="col-xs-12 upload">
                                                                     <p id="upimagetwo">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenthreefile" id="upimgtwo"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" aria-labelledby="upimgtwo upimagetwo">
+                                                                        <label class="small upload-drop-zone" for="specimenthreefile" id="upimgtwo"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimenthreefile" name="specimenthreefileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgtwo upimagetwo">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -425,8 +425,8 @@
                                                                     <div class="form-group form-group-md col-xs-12 upload">
                                                                         <p id="upimagethree">Please provide a copy of the Foreign Registration Certificate. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                                         <div class="form-group form-group-md hidethis">
-                                                                            <label class="small upload-drop-zone" for="1" id="upimgthree"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                            <input type="file" id="1" name="specimenfileupload" class="form-control" aria-labelledby="upimgthree upimagethree">
+                                                                            <label class="small upload-drop-zone" for="1" id="upimgthree"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .pdf, .doc</div></label>
+                                                                            <input type="file" id="1" name="specimenfileupload" class="form-control"accept=".jpg,.pdf,.doc,.docx" aria-labelledby="upimgthree upimagethree">
                                                                         </div>
                                                                         <div class="row">
                                                                             <div class="js-upload-finished col-xs-12">
@@ -489,8 +489,8 @@
                                                                 <div class="col-xs-12 upload">
                                                                     <p id="upimagefour">Provide an image of your specimen:</p>
                                                                     <div class="form-group form-group-md hidethis">
-                                                                        <label class="small upload-drop-zone" for="specimenfivefile" id="upimgfour"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                        <input type="file" id="specimenfivefile" name="specimenfivefileupload" class="form-control" aria-labelledby="upimgfour upimagefour">
+                                                                        <label class="small upload-drop-zone" for="specimenfivefile" id="upimgfour"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                                                        <input type="file" id="specimenfivefile" name="specimenfivefileupload" class="form-control" accept=".jpg,.tiff,.png" aria-labelledby="upimgfour upimagefour">
                                                                     </div>
                                                                     <div class="row">
                                                                         <div class="js-upload-finished col-xs-12">
@@ -602,8 +602,8 @@
                                                                     <div class="form-group form-group-md col-xs-12 upload">
                                                                         <p id="upimagefive">Please provide a copy of the Foreign Registration Certificate. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                                         <div class="form-group form-group-md hidethis">
-                                                                            <label class="small upload-drop-zone" for="1" id="upimgfive"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Select File</div></label>
-                                                                            <input type="file" id="1" name="specimenfileupload" class="form-control" aria-labelledby="upimgfive upimagefive">
+                                                                            <label class="small upload-drop-zone" for="1" id="upimgfive"><div class="fileDisplayArea"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .pdf, .doc</div></label>
+                                                                            <input type="file" id="1" name="specimenfileupload" class="form-control"accept=".jpg,.pdf,.doc,.docx" aria-labelledby="upimgfive upimagefive">
                                                                         </div>
                                                                         <div class="row">
                                                                             <div class="js-upload-finished col-xs-12">
