--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -228,8 +228,8 @@
                                     <!--Start Dropzone-->
                                   <div class="col-xs-12 form-group form-group-md upload">
                                         <div class="form-group form-group-md hidethis">
-                                            <label class="small upload-drop-zone" for="file"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload a File</label>
-                                            <input type="file" id="file" name="file" class="form-control">
+                                            <label class="small upload-drop-zone" for="file"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>Upload file. Allowed file types .jpg, .tiff, .png</label>
+                                            <input type="file" id="file" name="file" class="form-control" accept=".jpg,.tiff,.png">
                                         </div><!-- Drop Zone -->
                                         <div class="row">
                                             <div class="js-upload-finished col-xs-12">
@@ -552,8 +552,8 @@
                                                                 <p><a href="#"><span class="glyphicon glyphicon-download" aria-hidden="true"></span> Consent Template</a></p>
                                                                 <div class="form-group form-group-md hidethis">
                                                                     <label class="small upload-drop-zone" for="consentfile"><span class="glyphicon glyphicon-upload" aria-hidden="true"></span> <br>
-                                                                        Upload Consent</label>
-                                                                    <input type="file" id="consentfile" name="consentfileupload" class="form-control">
+                                                                        Upload file. Allowed file types .doc</label>
+                                                                    <input type="file" id="consentfile" name="consentfileupload" class="form-control" accept=".doc,.docx">
                                                                 </div><!-- Drop Zone -->
                                                                 <div class="row">
                                                                     <div class="js-upload-finished col-xs-12">
