--- a/declaration_signature.html
+++ b/declaration_signature.html
@@ -210,7 +210,7 @@
                                 <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                                     <label class="switch">
                                     <input class="togglesavemore" type="checkbox">
-                                    <span class="slider uppercase"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                                    <span class="slider uppercase"><span id="on">On</span> <span id="off">Off</span></span>
                                     </label>
                                 </div>
                             </div>
@@ -471,7 +471,7 @@
                                                     </div>
                                                     <div class="row">
                                                         <div class="col-xs-12 form-group form-group-md indentctr">
-                                                            <p class="weight600">Read the following statements before signing. Acknowledge the statements by checking the boxes and signing below. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p> 
+                                                            <p class="weight600">Read the following statements before signing. Acknowledge the statements by checking the boxes and signing below. <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></p> 
                                                             <div class="row">
                                                                 <div class="col-xs-12 form-group form-group-md">		
                                                                     <input class="form-check-input checkmark" type="checkbox" value="selectall" tabindex="0" aria-labelledby="selall" id="select">
