--- a/marks_stylized.html
+++ b/marks_stylized.html
@@ -211,7 +211,7 @@
                 <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                     <label class="switch">
                     <input class="togglesavemore" type="checkbox">
-                    <span class="slider uppercase"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                    <span class="slider uppercase"><span id="on">On</span> <span id="off">Off</span></span>
                     </label>
                 </div>
                 <!--START Trademark Details Design with Text-->
@@ -248,7 +248,7 @@
                                    </div>
                                 </div>
                                 <div class="form-group form-group-md col-xs-12">
-                                    <p class="weight600" aria-level="3">Mark Literal <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                    <p class="weight600" aria-level="3">Mark Literal <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                     <label for="ta2">Enter the word(s), letter(s), and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set" target="_blank">USPTO standard character set<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>  <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a>.</label> 
                                     <textarea id="ta2" rows="3" class="form-control" required></textarea>
                                         <div class="row">
@@ -271,7 +271,7 @@
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescolorclaim" role="alert"><!--toggle 'yes' radio-->
-                                                            <label for="ta3">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>                                                            <textarea id="ta3" rows="3" class="form-control"></textarea>
+                                                            <label for="ta3">Identify the colors in your mark. <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></label>                                                            <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600 form-group form-group-md">Mark Description</h3>
                                                             <label for="ta2">Enter the description of the mark including the location of the colors. <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>  
                                                             <textarea id="ta2" rows="3" class="form-control" required></textarea>
@@ -317,7 +317,7 @@
                                                         <div id="yestranslation" aria-labelledby="translate" role="alert"><!--toggle 'yes' radio-->
                                                         	<div class="row">
                                                                 <div class="col-xs-12 form-group form-group-md holdsatranslate">
-                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
+                                                                    <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                                     <div class="row addtranslation">
                                                                         <div class="form-group form-group-md col-xs-12 visuallyremoved resettranslation">
                                                                             <button type="button" class="btn btn-sm close resettranslationbtn" aria-label="remove this translation"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
@@ -379,7 +379,7 @@
                                                         <div id="yestransliteration" aria-labelledby="translitp" role="alert"><!--toggle 'yes' radio-->
                                                           	<div class="row">
                                                                 <div class="col-xs-12 form-group form-group-md holdsatransliterate">
-                                                                    <h3 class="weight600" id="translitp">Enter the transliteration of the mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
+                                                                    <h3 class="weight600" id="translitp">Enter the transliteration of the mark. <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                                     <div class="row addtransliteration">
                                                                         <div class="form-group form-group-md col-xs-12 visuallyremoved resettransliteration">
                                                                             <button type="button" class="btn btn-sm close resettransliterationbtn" aria-label="remove this transliteration"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
@@ -444,7 +444,7 @@
                                                         	<p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
-                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                                            <p class="savep"><span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                                 <div class="containsaname col-xs-12">
                                                                     <div class="row addname">
