--- a/statement_of_use.html
+++ b/statement_of_use.html
@@ -271,11 +271,11 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                    <label for="connection-date_one" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
+                                                    <label for="connection-date_one" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span></label>
                                                     <input type="date" class="form-control" id="connection-date_one" name="connectiondate" value="">
                                                 </div> 
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                    <label for="firstconnection-date_one" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
+                                                    <label for="firstconnection-date_one" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span></label>
                                                     <input type="date" class="form-control" id="firstconnection-date_one" name="firstconnectiondate" value="">
                                                 </div>
                                             </div>
@@ -460,11 +460,11 @@
                                             </div>
                                             <div class="row">
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                    <label for="connection-date_two" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
+                                                    <label for="connection-date_two" class="matchlabelheighttwo">When did you first use the mark in connection with the goods/services? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used with the goods or services." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span></label>
                                                     <input type="date" class="form-control" id="connection-date_two" name="connectiondate_two" value="">
                                                 </div> 
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md">
-                                                    <label for="firstconnection-date_two" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle visuallyremoved">Reduced Fee</span></label>
+                                                    <label for="firstconnection-date_two" class="matchlabelheighttwo">When did you first use the mark in Commerce? <a href="#" data-toggle="tooltip" title="Enter the date on which the mark was first used in commerce, such as commerce between states or between the United States and another country." class="glyphicon glyphicon-info-sign test" data-placement="right"></a> <span class="label label-info subtle">Reduced Fee</span></label>
                                                     <input type="date" class="form-control" id="firstconnection-date_two" name="firstconnectiondate_two" value="">
                                                 </div>
                                             </div>
