--- a/marks_design_with_text_disclaimer_M2.html
+++ b/marks_design_with_text_disclaimer_M2.html
@@ -210,7 +210,7 @@
             <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                 <label class="switch">
                 <input class="togglesavemore" type="checkbox">
-                <span class="slider uppercase"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                <span class="slider uppercase"><span id="on">On</span> <span id="off">Off</span></span>
                 </label>
             </div>
           	<!--START Trademark Examples-->
@@ -290,7 +290,7 @@
                                                     <div id="yesprior" role="alert" aria-live="assertive" aria-labelledby="prioreg" class="form-group form-group-md">
                                                         <div class="row docket">
                                                             <div class="form-group form-group-md col-xs-9">
-                                                                <label for="yesprior">Enter prior U.S. registration numbers. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
+                                                                <label for="yesprior">Enter prior U.S. registration numbers. <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                                 <input type="text" class="form-control" id="yesprior">
                                                             </div>
                                                             <div class="form-group form-group-md visuallyremoved resetdkt col-xs-3">
