--- a/marks_designonly.html
+++ b/marks_designonly.html
@@ -211,7 +211,7 @@
                 <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                     <label class="switch">
                     <input class="togglesavemore" type="checkbox">
-                    <span class="slider uppercase"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                    <span class="slider uppercase"><span id="on">On</span> <span id="off">Off</span></span>
                     </label>
                 </div>
                 <!--START Trademark Details Design with Text-->
@@ -268,7 +268,7 @@
                                                             <label for="inlineRadio2" class="radio-inline radiocontainer">No<input type="radio" name="coloradio" id="inlineRadio2" value="no" tabindex="0"><span class="checkmark"></span></label>
                                                         </div><!--END radiogroup-->
                                                         <div id="yescolorclaim" role="alert"><!--toggle 'yes' radio-->
-                                                            <label for="ta3">Identify the colors in your mark. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label> 
+                                                            <label for="ta3">Identify the colors in your mark. <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></label> 
                                                             <textarea id="ta3" rows="3" class="form-control"></textarea>
                                                             <h3 class="weight600 form-group form-group-md">Mark Description</h3>
                                                             <label for="ta2">Enter the description of the mark including the location of the colors. <span class="weight600">&#42;</span> <a href="#" data-toggle="tooltip" title="If the mark is a color mark, the description must include the nature and location of the color; i.e., you must specifically state where each color is located within the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a></label>  
@@ -316,7 +316,7 @@
                                                         	<p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
-                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                                            <p class="savep"><span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="row form-group form-group-md">
                                                                 <div class="containsaname col-xs-12">
                                                                     <div class="row addname">
