--- a/marks_standard_character.html
+++ b/marks_standard_character.html
@@ -216,7 +216,7 @@
                     <label class="switch">
                         <input class="togglesavemore" type="checkbox">
                         <span class="slider uppercase">
-                            <span class="visuallyhidden" id="on">On</span> 
+                            <span id="on">On</span> 
                             <span id="off">Off</span>
                         </span>
                     </label>
@@ -234,7 +234,7 @@
                                         <div class="row">
                                             <section aria-label="mark text">
                                             	<div class="col-xs-12">
-                                                	<p class="weight600" aria-level="3">Mark Literal <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                                	<p class="weight600" aria-level="3">Mark Literal <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                 	<p>Enter the word(s), letter(s), and/or number(s) you wish to register, e.g., <span class="uppercase">the cat&#8217;s meow</span>. Entries in this field must be found in the <a href="https://www.uspto.gov/trademark/standard-character-set" target="_blank">USPTO standard character set<span class="sr-only">Opens in new window</span><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a>  <a href="#" data-toggle="tooltip" title="Any entry in this field that is not found in the mark image will not be considered part of the mark." class="glyphicon glyphicon-info-sign test" data-placement="right"></a>.</p>
                                                 </div>
                                                 <div class="col-xs-12 col-md-6 form-group form-group-md" id="entertext">
@@ -270,7 +270,7 @@
                                                         </div><!--END radiogroup-->
                                                         <div id="yestranslation" aria-labelledby="translate" role="alert"><!--toggle 'yes' radio-->
                                                             <div class="col-xs-12 form-group form-group-md holdsatranslate">
-                                                                <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
+                                                                <h3 class="weight600" id="translate">Enter the foreign language and the translation. <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></h3>
                                                                 <div class="row addtranslation">
                                                                     <div class="form-group form-group-md col-xs-12 visuallyremoved resettranslation">
                                                                         <button type="button" class="btn btn-sm close resettranslationbtn" aria-label="remove this translation"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span></button>
@@ -331,7 +331,7 @@
                                                             <p id="whichnps">Identify which of the following it contains:</p> 
                                                             <input class="form-check-input checkmark" type="checkbox" value="name" tabindex="0" aria-labelledby="checkname" id="namechecked">
                                                             <label class="form-check-label form-check" for="namechecked" id="checkname"><span class="radio notspecial">Name</span></label>
-                                                            <p class="savep"><span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
+                                                            <p class="savep"><span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></p>
                                                             <div id="yescontainsname" role="region" aria-labelledby="whichnps" class="form-group form-group-md">
                                                              	<div class="containsaname col-xs-12">
                                                                     <div class="row addname">
