--- a/owner_info_M1.html
+++ b/owner_info_M1.html
@@ -220,7 +220,7 @@
                     <div role="switch" aria-describedby="#costsavingoptions" aria-label="turn Reduced Fee labels on or off">
                         <label class="switch">
                         <input class="togglesavemore" type="checkbox">
-                        <span class="slider uppercase"><span class="visuallyhidden" id="on">On</span> <span id="off">Off</span></span>
+                        <span class="slider uppercase"><span id="on">On</span> <span id="off">Off</span></span>
                         </label>
                     </div>
                     <!--START Owner Information Form-->
@@ -250,7 +250,7 @@
                                         <fieldset aria-labelledby="entitytype">
                                             <div class="row">
                                               <div class="form-group form-group-md col-xs-6">
-                                                <label for="entype">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
+                                                <label for="entype">Please select the entity type: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                 <select class="form-control" id="entype">
                                                   <option value="Select">Select</option>
                                                   <option value="individual">Individual</option>
@@ -293,7 +293,7 @@
                                               <div class="form-group form-group-md col-xs-12 col-lg-6" id="switchselect">
                                               	<div class="row">
                                                     <div class="col-xs-12 albaniaform" role="alert">
-                                                        <label for="entypeforeignalbania">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
+                                                        <label for="entypeforeignalbania">Please select the entity type: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignalbania">
                                                           <option value="Select">Select</option>
                                                           <option value="jointstock">Joint Stock Company</option>
@@ -301,7 +301,7 @@
                                                         </select>
                                                     </div>
                                                     <div class="col-xs-12 algeriaform" role="alert">
-                                                        <label for="entypeforeignalgeria">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
+                                                        <label for="entypeforeignalgeria">Please select the entity type: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignalgeria">
                                                           <option value="Select">Select</option>
                                                           <option value="jointstock">Joint Stock Company</option>
@@ -312,7 +312,7 @@
                                                         </select>
                                                     </div>
                                                     <div class="col-xs-12 angolaform" role="alert">
-                                                        <label for="entypeforeignangola">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
+                                                        <label for="entypeforeignangola">Please select the entity type: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignalgeria">
                                                           <option value="Select">Select</option>
                                                           <option value="jointstock">Joint Stock Company</option>
@@ -323,7 +323,7 @@
                                                         </select>
                                                     </div>
                                                     <div class="col-xs-12 bahamasform" role="alert">
-                                                        <label for="entypeforeignbahamas">Please select the entity type: <span class="label label-info subtle visuallyremoved" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
+                                                        <label for="entypeforeignbahamas">Please select the entity type: <span class="label label-info subtle" aria-describedby="#costsavingoptions">Reduced Fee</span></label>
                                                         <select class="form-control" id="entypeforeignbahamas">
                                                           <option value="Select">Select</option>
                                                           <option value="soleforeign" disabled>Sole proprietorship</option>
